# VReg

./: .clang-format  CMakeLists.txt  readme.md
vreg/: CMakeLists.txt
vreg/docs/: vreg.md
vreg/inc/: vreg.hpp  vreg_base.hpp  vreg_builder.hpp  vreg_impl.hpp  vregex.hpp
vreg/src/: vreg.cpp
vreg/test/: vreg_test.cpp  vregex_test.cpp
vreg_demo/: CMakeLists.txt
vreg_demo/src/: main.cpp
